<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        tools:context=".activities.Login"
        android:padding="15dp"
        android:orientation="vertical">

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="299dp"
            android:src="@drawable/risklogo"
            android:contentDescription="Risk Logo"
            android:layout_gravity="center_horizontal"/>

    <TextView
            android:text="@string/login"
            android:textSize="25sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginBottom="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username"
                android:hint="@string/username"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
            android:layout_marginTop="20sp"
            android:textSize="15sp"
            android:id="@+id/btn_login"
            android:textAllCaps="true"
            android:text="@string/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <TextView
            android:text="@string/register_info"
            android:layout_marginTop="20sp"
            android:textSize="15sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginBottom="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <Button
            android:textSize="15sp"
            android:id="@+id/btn_register_now"
            android:textAllCaps="true"
            android:text="@string/register_now"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
</LinearLayout>