<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        tools:context=".activities.MainMenu"
        android:padding="15dp"
        android:orientation="vertical">

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="299dp"
            android:src="@drawable/risklogo"
            android:contentDescription="Risk Logo"
            android:layout_gravity="center_horizontal"/>

    <Button
            android:textSize="15sp"
            android:id="@+id/btn_join_lobby"
            android:textAllCaps="true"
            android:text="@string/join_lobby"
            android:layout_width="200dp"
            android:layout_height="60dp"
    />


    <Button
            android:layout_margin="20sp"
            android:textSize="15sp"
            android:id="@+id/btn_create_lobby"
            android:textAllCaps="true"
            android:text="@string/create_lobby"
            android:layout_width="200dp"
            android:layout_height="60dp"/>

    <Button
            android:textSize="15sp"
            android:id="@+id/btn_logout"
            android:textAllCaps="true"
            android:text="@string/logout"
            android:layout_width="200dp"
            android:layout_height="60dp"/>


</LinearLayout>